--- a/TorchAutoBuild.csproj
+++ b/TorchAutoBuild.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <Folder Include="Assets\" />
+    <Folder Include="Data\Bonuses\" />
     <Folder Include="UI\" />
   </ItemGroup>
 </Project>
